--- a/public/chat.html
+++ b/public/chat.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Botkit Anywhere</title>
+        <title>Chat</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.min.js"></script>
         <script src="https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js"></script>
         <link rel="stylesheet" href="css/styles.css" />
@@ -11,13 +11,13 @@
 
         <div id="message_window">
             <div class="disconnected">
-                Disconnected... reconnecting!
+                Nicht verbunden ... verbinde!
             </div>
             <div class="offline">
-                Offline! Reload to reconnect.
+                Offline! Bitte neu laden.
             </div>
             <div class="powered_by">
-              Powered by <a href="https://botkit.ai" target="_blank" title="Building Blocks for Building Bots"><img src="/botkit_icon.png" width="15" height="15" alt="Botkit Logo" /> Botkit</a>
+              Powered by Teriell and <a href="https://botkit.ai" target="_blank" title="Building Blocks for Building Bots"><img src="/botkit_icon.png" width="15" height="15" alt="Botkit Logo" /> Botkit</a>
             </div>
             <section>
                 <div id="message_list">
@@ -52,8 +52,9 @@
             </div>
             <footer>
                 <form onsubmit="Botkit.send(Botkit.input.value, event)">
-                    <input type="text" autocomplete="off" id="messenger_input" placeholder="Type here..." />
-                    <button type="submit">Send</button>
+                  <span style="font-size:8px;"></span>
+                    <input type="text" autocomplete="off" id="messenger_input" placeholder="Eingabe ..." />
+                    <button type="submit">Los</button>
                 </form>
             </footer>
         </div>
